--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -10,3 +10,5 @@ spring:
     properties:
       hibernate:
         format_sql: true
+
+feign.client.situacao-financeira.url: "http://localhost:9999/api/solicitacao"
