--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -14,8 +14,8 @@ spring:
     oauth2:
       resourceserver:
         jwt:
-          issuer-uri: ${KEYCLOAK_ISSUER_URI:http://localhost:18080/auth/realms/proposta}
-          jwk-set-uri: ${KEYCLOAK_JWKS_URI:http://localhost:18080/auth/realms/proposta/protocol/openid-connect/certs}
+          issuer-uri: ${KEYCLOAK_ISSUER_URI:http://localhost:18080/auth/realms/nosso-cartao}
+          jwk-set-uri: ${KEYCLOAK_JWKS_URI:http://localhost:18080/auth/realms/nosso-cartao/protocol/openid-connect/certs}
 
 
 management:
@@ -31,7 +31,7 @@ feign:
   client:
     situacao-financeira:
       url: ${URL_FINANCEIRO:http://localhost:9999/api/solicitacao}
-    associa-cartao:
+    contas-cartoes:
       url: ${URL_CARTOES:http://localhost:8888/api/cartoes}
 
 associar:
