Adicionado métricas e integração com o prometheus.

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -114,8 +114,8 @@ services:
   prometheus:
     image: prom/prometheus:v2.22.0
     volumes:
-    #  - ./prometheus.yml:/etc/prometheus/prometheus.yml
-     - prometheus-volume:/etc/prometheus/
+      - ./prometheus.yml:/etc/prometheus/prometheus.yml
+    #  - prometheus-volume:/etc/prometheus/
     ports:
       - "9090:9090"
 
@@ -155,6 +155,8 @@ services:
       URL_DATABASE: jdbc:postgresql://postgres/keycloak
       DATABASE_USERNAME: keycloak
       DATABASE_PASSWORD: password
+      NOME_DA_APLICACAO: propostas
+      AMBIENTE: producao
 
 volumes:
   grafana-volume:
