--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -22,7 +22,15 @@ management:
   endpoints:
     web:
       exposure:
-        include: "*"
+        include: info,health,prometheus
+    prometheus:
+      enabled: true
+  metrics:
+    tags:
+      aplicacao: ${NOME_DA_APLICACAO:serviço de proposta}
+      ambiente: ${AMBIENTE:desenvolvimento}
+
+
 
 server:
   port: ${SERVER_PORT:8080}
