--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -30,8 +30,6 @@ management:
       aplicacao: ${NOME_DA_APLICACAO:serviço de proposta}
       ambiente: ${AMBIENTE:desenvolvimento}
 
-
-
 server:
   port: ${SERVER_PORT:8080}
 
@@ -39,7 +37,7 @@ feign:
   client:
     situacao-financeira:
       url: ${URL_FINANCEIRO:http://localhost:9999/api/solicitacao}
-    contas-cartoes:
+    cartoes:
       url: ${URL_CARTOES:http://localhost:8888/api/cartoes}
 
 associar:
